Cabal-version:       2.2
Name:                hslice
Version:             0.0.1
Tested-with:         GHC >= 8.6
Build-type:          Simple
Synopsis:            A GCode generator, that accepts STL files.
Description:         A slicer in haskell. Use it to slice 3D prints.
License:             AGPL-3.0-only
License-file:        LICENSE
Author:              Julia Longtin <julial@turinglace.com>
Maintainer:          Julia Longtin <julial@turinglace.com>
Homepage:            http://implicitcad.org/
Category:            Graphics

Common stuff
    Default-Language: Haskell2010
    Ghc-options:
                -threaded
                -rtsopts "-with-rtsopts -N -qg -t"
                -optc-O3
                -- see GHC manual 8.2.1 section 6.5.1.
                -feager-blackholing
                -Wall
                -Wextra
                -Wcompat
                -Wmonomorphism-restriction
                -Wmissing-signatures
                -Wmissing-export-lists
                -Wmissing-import-lists
                -Wmissing-home-modules
                -Widentities
                -Wimplicit-prelude
                -Wredundant-constraints
                -Wall-missed-specialisations

Library
    Import: stuff
    Build-depends:
                    base
                  , bytestring
                  , data-ordlist
                  , deepseq
                  , double-conversion
                  , extra
                  , implicit
                  , mtl
                  , parallel
                  , utf8-string
    Exposed-Modules:
                    Graphics.Slicer
                    Graphics.Slicer.Formats.STL.Definitions
                    Graphics.Slicer.Formats.STL.Facets
                    Graphics.Slicer.Math.CheckFacets
                    Graphics.Slicer.Math.Contour
                    Graphics.Slicer.Math.Definitions
                    Graphics.Slicer.Math.Facet
                    Graphics.Slicer.Math.Tri
                    Graphics.Slicer.Math.GeometricAlgebra
                    Graphics.Slicer.Math.PGA
                    Graphics.Slicer.Machine.StateM
                    Graphics.Slicer.Machine.Infill
                    Graphics.Slicer.Machine.Contour
                    Graphics.Slicer.Machine.GCode
                    Graphics.Slicer.Math.Line
    Other-Modules:
                  Graphics.Slicer.Math.Point
                  Graphics.Slicer.Machine.Support
                  Graphics.Slicer.Math.Slicer
                  Graphics.Slicer.Formats.GCode.Definitions
                  Graphics.Slicer.Mechanics.Definitions
                  Graphics.Slicer.Concepts.Definitions
                  Graphics.Slicer.Definitions

Executable extcuraengine
    Import: stuff
    Main-is: extcuraengine.hs
    Hs-source-dirs: programs
    Build-depends:
                    base
                  , bytestring
                  , hslice
                  , implicit
                  , mtl
                  , optparse-applicative
                  , parallel
                  , utf8-string

Executable extadmesh
    Import: stuff
    Main-is: extadmesh.hs
    Hs-source-dirs: programs
    Build-depends:
                    base
                  , bytestring
                  , hslice
                  , implicit
                  , mtl
                  , optparse-applicative
                  , parallel
                  , utf8-string

Test-suite test-hslice
    Import: stuff
    Type: exitcode-stdio-1.0
    default-extensions: NoImplicitPrelude
    Build-depends:
                    base
                  , hspec
                  , hslice
    Main-is: Main.hs
    Hs-source-dirs: tests
    Other-Modules:
                   Math.Util
                   Math.PGA

Source-repository head
    Type:            git
    Location:        https://github.com/julialongtin/hslice.git
