Cabal-version:       2.2
Name:                hslice
Version:             0.0.1
Tested-with:         GHC >= 8.8
Build-type:          Simple
Synopsis:            A GCode generator, that accepts STL files.
Description:         A slicer in haskell. Use it to slice 3D prints.
License:             AGPL-3.0-or-later
License-file:        LICENSE
Author:              Julia Longtin <julia.longtin@gmail.com>
Maintainer:          Julia Longtin <julia.longtin@gmail.com>
Homepage:            http://implicitcad.org/
Category:            Graphics

Common binstuff
    Default-Language: Haskell2010
    Default-extensions: NoImplicitPrelude
    Ghc-options:
                -threaded
                -rtsopts "-with-rtsopts -N -qg -t"
                -optc-O3
                -- see GHC manual 8.2.1 section 6.5.1.
                -feager-blackholing
                -- for weeder
                -fwrite-ide-info
                -- for stan
                -hiedir=.hie
                -Wall
                -Wextra
                -Wcompat
                -Wmonomorphism-restriction
                -Wmissing-signatures
                -Wmissing-export-lists
                -Wmissing-import-lists
                -Wmissing-home-modules
                -Widentities
                -Wimplicit-prelude
                -Wredundant-constraints
                -Wall-missed-specialisations

Common libstuff
    Default-Language: Haskell2010
    Default-extensions: NoImplicitPrelude
    Ghc-options:
                -optc-O3
                -- see GHC manual 8.2.1 section 6.5.1.
                -feager-blackholing
                -- for weeder
                -fwrite-ide-info
                -- for stan
                -hiedir=.hie
                -Wall
                -Wextra
                -Wcompat
                -Wmonomorphism-restriction
                -Wmissing-signatures
                -Wmissing-export-lists
                -Wmissing-import-lists
                -Wmissing-home-modules
                -Widentities
                -Wimplicit-prelude
                -Wredundant-constraints
                -Wall-missed-specialisations

Library
    Import: libstuff
    Build-depends:
                    base
                  , bytestring
                  , data-ordlist
                  , deepseq
                  , double-conversion
                  , extra
                  , implicit
                  , mtl
                  , parallel
                  , slist >=0.2.0.0
                  , Unique
                  , utf8-string
    Exposed-Modules:
                    Graphics.Slicer
                    Graphics.Slicer.Formats.STL.Definitions
                    Graphics.Slicer.Formats.STL.Facets
                    Graphics.Slicer.Machine.StateM
                    Graphics.Slicer.Machine.Infill
                    Graphics.Slicer.Machine.Contour
                    Graphics.Slicer.Machine.GCode
                    Graphics.Slicer.Math.CheckFacets
                    Graphics.Slicer.Math.Contour
                    Graphics.Slicer.Math.Definitions
                    Graphics.Slicer.Math.Facet
                    Graphics.Slicer.Math.Ganja
                    Graphics.Slicer.Math.GeometricAlgebra
                    Graphics.Slicer.Math.Line
                    Graphics.Slicer.Math.PGA
                    Graphics.Slicer.Math.Skeleton.Concave
                    Graphics.Slicer.Math.Skeleton.Definitions
                    Graphics.Slicer.Math.Skeleton.Face
                    Graphics.Slicer.Math.Skeleton.Line
                    Graphics.Slicer.Math.Skeleton.Motorcycles
                    Graphics.Slicer.Math.Skeleton.NodeTrees
                    Graphics.Slicer.Math.Skeleton.Skeleton
                    Graphics.Slicer.Math.Skeleton.Tscherne
                    Graphics.Slicer.Math.Tri
    Other-Modules:
                  Graphics.Slicer.Math.Point
                  Graphics.Slicer.Machine.Support
                  Graphics.Slicer.Math.Slicer
                  Graphics.Slicer.Formats.GCode.Definitions
                  Graphics.Slicer.Mechanics.Definitions
                  Graphics.Slicer.Concepts.Definitions
                  Graphics.Slicer.Definitions

Executable extcuraengine
    Import: binstuff
    Main-is: extcuraengine.hs
    Hs-source-dirs: programs
    Build-depends:
                    base
                  , bytestring
                  , hslice
                  , implicit
                  , mtl
                  , optparse-applicative
                  , parallel
                  , utf8-string

Executable extadmesh
    Import: binstuff
    Main-is: extadmesh.hs
    Hs-source-dirs: programs
    Build-depends:
                    base
                  , bytestring
                  , hslice
                  , implicit
                  , mtl
                  , optparse-applicative
                  , parallel
                  , utf8-string

Test-suite test-hslice
    Import: binstuff
    Main-is: Main.hs
    Hs-source-dirs: tests
    Build-depends:
                    base
                  , hspec
                  , hslice
                  , slist
    Type: exitcode-stdio-1.0
    Other-Modules:
                   Math.Util
                   Math.PGA

Source-repository head
    Type:            git
    Location:        https://github.com/julialongtin/hslice.git
