Name:                slicer
Version:             0.0.1
Cabal-version:       >= 1.8
Tested-with:         GHC >= 8.4
Build-type:          Simple
Synopsis:            A GCode generator, that accepts STL files.
Description:         A slicer in haskell. Use it to slice 3D prints.
License:             AGPL-3
License-file:        LICENSE
Author:              Julia Longtin <julial@turinglace.com>
Maintainer:          Julia Longtin <julial@turinglace.com>
Homepage:            http://implicitcad.org/
Category:            Graphics

Library
    Build-depends:
                  base
    Ghc-options:
                -optc-O3
                -- see GHC manual 8.2.1 section 6.5.1.
                -feager-blackholing
                -- for debugging.
                -Wall
                -Wextra
                -Weverything
    Exposed-Modules:
                    Graphics.Slicer
    Other-Modules:
                  Graphics.Slicer.Concepts.Definitions
                  Graphics.Slicer.Definitions
                  Graphics.Slicer.FastIntUtil
                  Graphics.Slicer.IntegralUtil
                  Graphics.Slicer.Objects.Definitions
                  
Executable extcuraengine
    Main-is: extcuraengine.hs
    Hs-source-dirs: programs
    Build-depends:
                  base,
                  implicit,
                  slicer
    Ghc-options:
                -threaded
                -rtsopts
                -optc-O3
                -- see GHC manual 8.2.1 section 6.5.1.
                -feager-blackholing
                -- for debugging.
                -Wall
                -Wextra
                -Weverything

Source-repository head
    Type:            git
    Location:        https://github.com/julialongtin/slicer.git
